<resources>
    <string name="app_name">MyPatoo</string>
    <string name="set_privacy_pwd">设置隐私密码</string>
    <string name="skip">跳过</string>
    <string name="confirm_privacy_pwd">请再次确认隐私密码</string>
    <string name="choose_gender">选择你的性别</string>
    <string name="girl">女生</string>
    <string name="boy">男生</string>
    <string name="un_modify">性别选择后不可以修改哦</string>
    <string name="finishSetUpBtn">开启你的啪啪之旅</string>
    <string name="input_privacy_pwd">输入隐私密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="next_step">下一步</string>
    <string name="net_rule">依《网络安全法》相关要求，使用前必须绑定手机，感谢您的理解和支持</string>
    <string name="agreement">阅读并同意用户协议</string>
    <string name="input_id_code">输入验证码</string>
    <string name="get_id_code">获取验证码</string>
    <string name="input_phone_number">输入你的手机号</string>
    <string name="register_id">注册账号</string>
    <string name="top_title">Title</string>

</resources>
