<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/register_id"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/input_phone_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/request_code_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_of_skip_btn"
            android:gravity="center"
            android:text="@string/get_id_code"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E5E5E5" />

    <EditText
        android:id="@+id/input_code_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:hint="@string/input_id_code"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:textSize="14sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/net_rule"
        android:textSize="10sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/agreement"
        android:textColorLink="@android:color/black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/next_step_tv"
            style="@style/NextStepStyle"
            android:layout_gravity="bottom"
            android:text="@string/next_step" />
    </LinearLayout>


</LinearLayout>