<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/choose_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/choose_gender"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/chooseFemaleBtn"
                style="@style/ChooseGenderIconStyle"
                android:background="@drawable/choose_gender_circle_bg_of_unselect"
                android:src="@mipmap/female" />

            <TextView
                style="@style/ChooseGenderTextStyle"
                android:text="@string/girl" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/chooseMaleBtn"
                style="@style/ChooseGenderIconStyle"
                android:background="@drawable/choose_gender_circle_bg_of_selected_male"
                android:src="@mipmap/male" />

            <TextView
                style="@style/ChooseGenderTextStyle"
                android:text="@string/boy" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/un_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/un_modify"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/finishSetUpBtn"
            style="@style/GradientMaleBtnStyle"
            android:layout_gravity="bottom"
            android:text="@string/finishSetUpBtn" />
    </LinearLayout>


</LinearLayout>



